<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55D69E"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/appName"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="345dp"
            android:padding="5sp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="345dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logotracknjeep" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="147dp"
            android:orientation="vertical"
            android:padding="5sp">

            <Button
                android:id="@+id/btnUser"
                style="@style/Widget.Material3.Button.UnelevatedButton"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/btnOrange"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/btnTxtLoginUser"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnGuest"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:backgroundTint="@color/main"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/btnTxtLoginGuest"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:strokeColor="@color/white"
                app:strokeWidth="2sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp">

            <TextView
                android:id="@+id/txtLogInWith"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_slab_bold"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:text="@string/txtLogInWith" />

            <Button
                android:id="@+id/button4"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle_button_background"
                android:text="G"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle_button_background"
                android:text="F"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>